--- a/src/components/layout/Navbar.css
+++ b/src/components/layout/Navbar.css
@@ -32,17 +32,24 @@ nav ul {
     font-size: 16px;
 }
 
-#mobil-menu-container {
+.mobil-menu-container {
     background-color:white;
     height: 100vh;
     width: 80%;
     z-index: 99;
     position: absolute;
     left: -100%;
-    transition: .4s;
+    transition: all 0.5s ease;
     margin-top: 50px;
     margin-left: -7px;
     margin-right: -7px;
+}
+
+.mobil-menu-container-active {
+    left: 0%;
+    transition: all 0.5s ease;
+    z-index: 99;
+
 }
 
 .nav-link {
@@ -115,7 +122,7 @@ nav ul {
         font-size: 16px;
     }
 
-    #mobil-menu-container {
+    .mobil-menu-container {
         background-color: #0bd45e;
         color: white;
         height: auto;
@@ -213,7 +220,7 @@ nav ul {
         grid-area: searchbar;
     }
 
-    #mobil-menu-container {
+    .mobil-menu-container {
         grid-area: menu-liste;
     }
 
