--- a/src/components/layout/Navbar.css
+++ b/src/components/layout/Navbar.css
@@ -1,9 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap');
+
+* {
+    font-family: 'Open Sans', sans-serif;
+}
+
 /* MOBIL */
 nav ul {
     list-style: none;
 }
 
 #menu-liste li {
+    cursor: pointer;
+}
+
+#user-tools ul li {
     cursor: pointer;
 }
 
@@ -31,13 +41,19 @@ nav ul {
 }
 
 #global-menu a {
-    color: black;
+    color: white;
+    text-decoration: none;
+    font-size: 16px;
+}
+
+#global-menu {
+    color: white;
     text-decoration: none;
     font-size: 16px;
 }
 
 .mobil-menu-container {
-    background-color:white;
+    background-color:#0bd45e;
     height: 100vh;
     width: 80%;
     z-index: 99;
@@ -52,7 +68,14 @@ nav ul {
 .mobil-menu-container-active {
     left: 0%;
     transition: all 0.5s ease;
+    background-color:#0bd45e;
+    height: 100vh;
+    width: 80%;
     z-index: 99;
+    position: absolute;
+    margin-top: 50px;
+    margin-left: -7px;
+    margin-right: -7px;
 
 }
 
@@ -63,10 +86,11 @@ nav ul {
 #user-tools ul {
     display: flex;
     flex-direction: row;
+    color: black;
 }
 
 #user-tools ul li:nth-child(1) {
-    margin-right: 12px;
+    margin-right: 22px;
 }
 
 #searchbar {
@@ -87,20 +111,62 @@ nav ul {
 }
 
 .user-links {
-    margin-top: 0;
-    margin-left: 0;
     position: absolute;
     opacity: 0;
     visibility: hidden;
     background-color: #0bd45e;
     color: white;
+    z-index: 99;
 }
 
 .user-links-active {
     opacity: 1;
     visibility: visible;
+    margin-top: 0;
+    margin-left: -40px;
+    position: absolute;
+    background-color: #0bd45e;
+    color: white;
+    z-index: 99;
 }
 
+.user-links-active #signedin-links a,
+.user-links-active #signedout-links a,
+.user-links-active #admin-links a {
+    color: white;
+}
+
+.user-links-active #signedin-links,
+.user-links-active #signedout-links,
+.user-links-active #admin-links {
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    color: white;
+}
+
+.user-links-active #signedin-links li,
+.user-links-active #signedout-links li,
+.user-links-active #admin-links li {
+    margin-bottom: 8px;
+    padding-left: 10px;
+    padding-right: 20px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+
+}
+
+.user-links #admin-links #add-product {
+    background-color: dodgerblue;
+}
+
+.user-links-active #admin-links #add-product {
+    background-color: dodgerblue;
+}
+
+
+
+/* DROPDOWN LIST */
 .dropdown-list {
     position: absolute;
     display: flex;
@@ -223,7 +289,7 @@ nav ul {
     }
 
     #user-tools ul li:nth-child(1) {
-        margin-right: 12px;
+        margin-right: 42px;
     }
 
     #searchbar {
@@ -271,10 +337,13 @@ nav ul {
         display: flex;
         justify-content: center;
         justify-items: center;
+        margin-left: 30px;
     }
 
     #user-tools {
         grid-area: user-tools;
+        margin-left: auto;
+        margin-right: 40%;
     }
 
     #searchbar {
