--- a/src/components/layout/Footer.css
+++ b/src/components/layout/Footer.css
@@ -1,6 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap');
+
+* {
+    font-family: 'Open Sans', sans-serif;
+}
+
 footer {
     max-width: 100%;
-    background-color: #0bd45e;
+    background-color: #00A14B;
     color: white;
     padding: 10px 10px;
 }
