--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -41,7 +41,7 @@
     margin-top: 1em;
     display: grid;
     max-width: 100%;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     grid-template-areas: 
                         "top3completes"
                         "top3bars"
