--- a/src/components/layout/Navbar.css
+++ b/src/components/layout/Navbar.css
@@ -5,6 +5,10 @@
 }
 
 /* MOBIL */
+nav {
+    max-width: 100%;
+}
+
 nav ul {
     list-style: none;
 }
@@ -44,6 +48,10 @@ nav ul {
     color: white;
     text-decoration: none;
     font-size: 16px;
+}
+
+#user-tools a {
+    color: black;
 }
 
 #global-menu {
