--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap');
 body {
+  max-width: 100%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+* {
+    font-family: 'Open Sans', sans-serif;
 }
 
 code {
@@ -14,4 +20,9 @@ code {
 
 .content {
   min-height: 100vh;
+  max-width: 100%;
+}
+
+html {
+  max-width: 100%;
 }
