--- a/src/components/gallery/gallery.css
+++ b/src/components/gallery/gallery.css
@@ -33,8 +33,7 @@
     max-width: 100%;
     height: 150px;
     display: flex;
-    margin-right: auto;
-    margin-left: auto;
+    margin: auto;
     padding: 5px 10px;
 }
 
@@ -73,7 +72,7 @@
 
 .dele-navigation button {
     width: 100px;
-    margin: 0 50px;
+    margin: 0 10px;
 }
 
 .dele-gallery-container {
@@ -87,7 +86,7 @@
 
 .gallery-section ul {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
 }
 
 /* DESKTOP */
@@ -121,9 +120,8 @@
         max-width: 100%;
         height: 250px;
         display: flex;
-        margin-right: auto;
-        margin-left: auto;
-        padding: 5px 10px;
+        margin: auto;
+        padding: 5px 10px 20px 10px;
     }
 
     .gallery-section ul li h3,
@@ -132,11 +130,13 @@
     }
 
     .gallery-section ul li h3 {
-        font-size: 22px;
+        font-size: 20px;
+        text-overflow: ellipsis;
+        white-space: nowrap;
     }
     
     .gallery-section ul li .pris {
-        font-size: 18px;
+        font-size: 17px;
     }
     
     .gallery-section ul li .size {
@@ -176,6 +176,6 @@
 
     .gallery-section ul {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-columns:  1fr 1fr 1fr;
     }
 }
