--- a/src/components/productDetails/productDetails.css
+++ b/src/components/productDetails/productDetails.css
@@ -3,7 +3,8 @@
     grid-area: image;
     margin-right: auto;
     margin-left: auto;
-    width: 300px;
+    width: 250px;
+    margin-bottom: 1em;
 }
 
 .brand-logo {
